Added calculator features

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -5,12 +6,14 @@
         <title>Document</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body>       
+        <h1>Calculator</h1>    
+        
         <section>
             <div class="container">
                 <div id="display"></div>
                 <div class="buttons">
-                    <div class="button">C</div>
+                    <div id="c" class="button">C</div>
                     <div class="button">/</div>
                     <div class="button">*</div>
                     <div class="button">&larr;</div>
@@ -33,5 +36,7 @@
                 </div>
             </div>
         </section>
+        <h2>By Tej</h2>
+        <script src="index.js"></script>
     </body>
 </html>
